icon left align correction

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -132,7 +132,7 @@
         left: -70px;
     }
     .about-section .timeline .timeline-item:nth-child(even) img {
-        left: -60px;
+        left: -70px;
     }
 
     .contact-section .input-group .input-control ::after {
